Fixed security vulnerabilities in dependencies. CVE-2019-17569 CVE-2020-1935

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.bluelotussoftware</groupId>
     <artifactId>tomcat-embedded-ssl-example</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <packaging>jar</packaging>
     <url>https://github.com/bluelotussoftware/tomcat-embedded-ssl-example</url>
     <inceptionYear>2016</inceptionYear>
@@ -49,17 +49,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <apache.tomcat.version>8.5.51</apache.tomcat.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>8.5.50</version>
+            <version>${apache.tomcat.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>8.5.50</version>
+            <version>${apache.tomcat.version}</version>
         </dependency>
     </dependencies>
 </project>
